# glimpse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GLIMPSED_PLAN.md  Justfile  PKGBUILD  PLAN.md  README.md  bar.toml  config.toml  theme.css
frameworks/custom-applet/sdk/: README.md  pyproject.toml
frameworks/custom-applet/sdk-rs/: Cargo.toml  README.md
glimpse/: Cargo.toml
glimpse-client/: Cargo.toml
glimpse-client/src/: lib.rs
glimpse-core/: Cargo.toml
glimpse-core/src/: heic.rs  lib.rs  night_light.rs
glimpse-core/src/compositors/: compositors.rs  hyprland.rs  mod.rs  niri.rs
glimpse-core/src/config/: background.rs  config.rs  discovery.rs  idle.rs  keyboard.rs  lock.rs  mod.rs  night_light.rs  panels.rs  theme.rs  wallpaper.rs  watch.rs
glimpse-core/src/dbus/: geoclue.rs  glimpse_lock.rs  login1.rs  mod.rs  network_manager.rs  network_secret_agent.rs  notifications.rs  power_profiles.rs  udisks2.rs  upower.rs
glimpse-core/src/services/: audio.rs  audio_events.rs  battery.rs  brightness.rs  clipboard.rs  compositor.rs  framework.rs  geoclue.rs  idle.rs  keyboard.rs  location.rs  microphone.rs  mod.rs  night_light.rs  power.rs  session.rs  solar.rs  storage.rs  theme.rs  webcam.rs
glimpse-core/tests/: config_behavior.rs
glimpse-idle/: Cargo.toml
glimpse-idle/src/: app.rs  backend.rs  lib.rs  main.rs  runtime.rs
glimpse-lock/: Cargo.toml  build.rs
glimpse-lock/resources/: export-lock.css  glimpse-lock.gresource.xml  lock.css  lock.toml
glimpse-lock/src/: app.rs  auth.rs  config.rs  lib.rs  logind.rs  main.rs  runtime.rs
glimpse-lock/src/dbus/: mod.rs
glimpse-lock/tests/: runtime_behavior.rs
glimpse-panel/: Cargo.toml
glimpse-panel/src/: app.rs  config.rs  main.rs
glimpse-panel/src/applets/: clock.rs  component.rs  mod.rs  spacer.rs
glimpse-panel/src/backdrop/: mod.rs  window.rs
glimpse-panel/src/panels/: component.rs
glimpse-panel/src/providers/: dbus.rs
glimpse-panel/src/services/: mod.rs
glimpse-panel/src/wallpaper/: heic.rs  mod.rs
glimpse-panel/tests/: event_row_format.rs
glimpse-settings/: Cargo.toml  build.rs
glimpse-settings/resources/: style.css
glimpse-settings/resources/ui/: window.blp
glimpse-settings/src/: app.rs  appearance.rs  background.rs  bluetooth.rs  debounce.rs  display.rs  lib.rs  main.rs  network.rs  network_backend.rs  niri_managed.rs  pages.rs  power.rs  power_backend.rs  route.rs  sound.rs  startup.rs
glimpse-shell/: Cargo.toml  build.rs
glimpse-shell/resources/: glimpse-shell.gresource.xml
glimpse-shell/src/: app.rs  config.rs  dbus.rs  main.rs  theme.rs
glimpse-shell/src/agents/: bluetooth.rs  mod.rs  network.rs
glimpse-shell/src/applets/: mod.rs
glimpse-shell/src/components/: action_menu.rs  action_row.rs  animated_popover.rs  badge.rs  card_surface.rs  collapsible_section.rs  copyable.rs  details_list.rs  device_list.rs  device_status.rs  empty_state.rs  hero.rs  item.rs  key_value_grid.rs  meter.rs  mod.rs  popover_scroll.rs  popover_shell.rs  section_header.rs  status_dot.rs  toast.rs
glimpse-shell/src/compositors/: compositors.rs  hyprland.rs  keyboard.rs  mod.rs  niri.rs
glimpse-shell/src/dbus/: bluetooth_agent.rs  bluez.rs  calendar.rs  dbus.rs  mod.rs  mpris.rs  network_secret_agent.rs  notifications.rs
glimpse-shell/src/panels/: applets.rs  mod.rs
glimpse-shell/src/prompts/: bluetooth.rs  network.rs
glimpse-shell/src/services/: audio.rs  battery.rs  compositor.rs  display.rs  framework.rs  geoclue.rs  location.rs  microphone.rs  mod.rs  power.rs  session.rs  webcam.rs
glimpse-sunset/: Cargo.toml
glimpse-sunset/src/: app.rs  backend.rs  lib.rs  logind.rs  main.rs  runtime.rs
glimpse-wallpaper/: Cargo.toml  README.md
glimpse-wallpaper/resources/: wallpaper.toml
glimpse-wallpaper/src/: app.rs  config.rs  heic.rs  lib.rs  main.rs  monitor.rs  niri.rs  runtime.rs  source.rs  widgets.rs
glimpse-wallpaper/tests/: runtime_behavior.rs
glimpse/src/: app.rs  compositor.rs  config.rs  dbus.rs  display.rs  lib.rs  main.rs
glimpse/src/app/: background_manager.rs  mod.rs  notification_popup_manager.rs  panel_manager.rs  theme_runtime.rs  watchers.rs
glimpse/src/applets/: mod.rs  registry.rs
glimpse/src/audio/: provider.rs
glimpse/src/backdrop/: config.rs  mod.rs  widget.rs  window.rs
glimpse/src/bluetooth/: agent.rs  mod.rs  protocol.rs  service.rs
glimpse/src/brightness/: mod.rs  protocol.rs  provider.rs  service.rs
glimpse/src/calendar/: mod.rs  protocol.rs  service.rs
glimpse/src/components/: action_row.rs  card_surface.rs  detail_grid.rs  empty_state.rs  footer_action.rs  hero_row.rs  mod.rs  popover_shell.rs  section_block.rs  style_contract_tests.rs
glimpse/src/compositor/: keyboard_service.rs  mod.rs  protocol.rs  workspace_service.rs
glimpse/src/compositors/: hyprland.rs  niri.rs
glimpse/src/dbus/: bluez.rs  geoclue.rs  login1.rs  mod.rs  mpris.rs  network_manager.rs  privacy.rs  status_notifier_item.rs
glimpse/src/location/: mod.rs  provider.rs
glimpse/src/mpris/: mod.rs  protocol.rs  provider.rs  service.rs
glimpse/src/network/: mod.rs  protocol.rs  provider.rs  secret_agent.rs  service.rs
glimpse/src/night_light/: backend.rs  mod.rs  protocol.rs  scheduler.rs  service.rs
glimpse/src/notifications/: mod.rs  persistence.rs  protocol.rs  server.rs  service.rs
glimpse/src/panels/: component.rs  diff.rs  mod.rs
glimpse/src/power/: provider.rs
glimpse/src/power_policy/: provider.rs
glimpse/src/privacy/: mod.rs  protocol.rs  service.rs
glimpse/src/providers/: battery.rs  bluetooth.rs  brightness.rs  calendar.rs  mod.rs  mpris.rs  network.rs  power.rs  power_policy.rs  privacy.rs  session_actions.rs  tray.rs
glimpse/src/services/: control.rs  framework.rs  mod.rs  runtime.rs
glimpse/tests/: notifications_persistence.rs  notifications_service.rs
glimpsectl/: Cargo.toml
glimpsectl/src/: cli.rs  connection.rs  format.rs  main.rs  picker.rs  probe.rs  tui.rs
glimpsed/: Cargo.toml
glimpsed/src/: bluetooth_agent.rs  broker.rs  main.rs  notification_server.rs  pattern.rs  provider.rs  secret_agent.rs  server.rs
(+580 files in other folders)
