[workspace]
resolver = "2"
members = ["glimpse", "glimpse-panel", "glimpse-types", "glimpsed", "glimpsectl", "glimpse-client", "glimpse-shell", "glimpse-wallpaper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
relm4 = { version = "0.9", features = ["libadwaita"] }
gtk4-layer-shell = "0.4"
gtk4 = { version = "0.9", package = "gtk4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "7"
notify-debouncer-full = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"
adw = { package = "libadwaita" }
system-tray = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "5"
anyhow = "1"
gio = "0.20"

[profile.release]
lto = "thin"
strip = true
