[package]
name = "glimpse-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glimpse-types = { path = "../glimpse-types" }
tokio = { workspace = true, features = ["net", "sync", "io-util", "macros"] }
serde_json.workspace = true
tracing.workspace = true
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
