[package]
name = "glimpse-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures-util.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
pipewire = "0.9"
reqwest.workspace = true
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
serde = { workspace = true }
serde_json.workspace = true
system-tray.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
zbus.workspace = true
