[package]
name = "glimpse-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
futures-util.workspace = true
image = "0.25"
libheif-rs = "2.7.0"
notify.workspace = true
notify-debouncer-full.workspace = true
pipewire = "0.9"
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sunrise.workspace = true
system-tray.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
wl-clipboard-rs.workspace = true
zbus = { workspace = true, features = ["blocking-api"] }
