[package]
name = "glimpse-lock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
css-color.workspace = true
dirs.workspace = true
futures-util.workspace = true
gio.workspace = true
glimpse-core = { path = "../glimpse-core" }
gtk4.workspace = true
gtk4-session-lock.workspace = true
image = "0.25"
notify.workspace = true
notify-debouncer-full.workspace = true
pam-client2 = { version = "0.5.5", default-features = false }
relm4.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
zeroize = "1"

[build-dependencies]
glib-build-tools.workspace = true
