[package]
name = "glimpse-panel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["dev"]
dev = []

[dependencies]
relm4.workspace = true
gtk4-layer-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
zbus.workspace = true
system-tray.workspace = true
