[package]
name = "glimpse-panel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["dev"]
dev = []

[dependencies]
relm4.workspace = true
adw = { package = "libadwaita", version = "0.7.2", features = ["v1_5"] }
gtk4-layer-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
zbus.workspace = true
futures-util.workspace = true
reqwest.workspace = true
glimpse-client = { path = "../glimpse-client" }
glimpse = { path = "../glimpse" }
tokio-util = "0.7"
glimpse_types = { package = "glimpse-types", path = "../glimpse-types" }
css-color.workspace = true
gio.workspace = true
anyhow.workspace = true
image = "0.25"
libheif-rs = "2.7.0"
