[package]
name = "glimpse-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
anyhow = "1"
gtk4 = "0.9"
glib = "0.20"
gio = "0.20"
glimpse = { path = "../glimpse" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
glib-build-tools = "0.20"
