[package]
name = "glimpse-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
adw.workspace = true
anyhow = "1"
gtk4.workspace = true
glib.workspace = true
gio.workspace = true
glimpse = { path = "../glimpse" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber.workspace = true
zbus = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
glib-build-tools.workspace = true
