[package]
name = "glimpse-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["dev"]
dev = []

[dependencies]
adw.workspace = true
anyhow.workspace = true
chrono.workspace = true
gtk4.workspace = true
glib.workspace = true
gio.workspace = true
gio-unix.workspace = true
relm4.workspace = true
glimpse-core = { path = "../glimpse-core" }
serde = { workspace = true }
serde_json = { workspace = true }
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
gtk4-layer-shell.workspace = true
toml.workspace = true
tokio-util.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
zbus.workspace = true
zeroize = "1"

[build-dependencies]
glib-build-tools.workspace = true
