[package]
name = "glimpse-sunset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
futures-util.workspace = true
glimpse-core = { path = "../glimpse-core" }
tokio = { workspace = true, features = ["macros", "signal"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
zbus.workspace = true

[dev-dependencies]
chrono.workspace = true
