[package]
name = "glimpse-wallpaper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
relm4.workspace = true
dirs.workspace = true
gtk4 = { workspace = true, features = ["v4_8"] }
gtk4-layer-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
zbus.workspace = true
futures-util.workspace = true
system-tray.workspace = true
glimpse-client = { path = "../glimpse-client" }
glimpse = { path = "../glimpse" }
glimpse-types = { package = "glimpse-types", path = "../glimpse-types" }
image = "0.25"
anyhow.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
gio.workspace = true
libheif-rs = "2.7.0"
plist = "1.8.0"
base64 = "0.22.1"
xml-rs = "1.0.0"
seahash = "4.1.0"
