[package]
name = "glimpse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
zbus = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros", "process", "io-util"] }
tokio-util = "0.7"
anyhow = "1"
async-trait = "0.1"
chrono = { workspace = true }
tracing = { workspace = true }
gio = "0.20.12"
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
system-tray.workspace = true
gtk4 = { workspace = true, features = ["v4_8"] }
css-color.workspace = true
image = "0.25"
libheif-rs = "2.7.0"
