[package]
name = "glimpse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["dev"]
dev = []

[[bin]]
name = "glimpse-panel"
path = "src/main.rs"

[dependencies]
relm4.workspace = true
adw = { package = "libadwaita", version = "0.7.2", features = ["v1_5"] }
gtk4-layer-shell.workspace = true
zbus = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "process", "io-util"] }
tokio-util = "0.7"
anyhow = "1"
async-trait = "0.1"
chrono = { workspace = true }
chrono-tz.workspace = true
tracing = { workspace = true }
tracing-subscriber.workspace = true
uuid.workspace = true
gio = "0.20.12"
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }
system-tray.workspace = true
gtk4 = { workspace = true, features = ["v4_8"] }
css-color.workspace = true
reqwest.workspace = true
image = "0.25"
libheif-rs = "2.7.0"
dirs.workspace = true
