[package]
name = "glimpsectl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glimpse-types = { path = "../glimpse-types" }
glimpse-client = { path = "../glimpse-client" }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "io-util", "signal", "macros"] }
serde_json.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored_json = "5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util.workspace = true
nucleo-matcher = "0.3"
