[package]
name = "glimpsectl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glimpse = { path = "../glimpse" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal"] }
tokio-util = "0.7"
zbus = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
chrono.workspace = true
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored_json = "5"
