[package]
name = "glimpsed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "io-util", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
tokio-util = "0.7"
