[package]
name = "glimpsed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glimpse-types = { path = "../glimpse-types" }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "sync", "io-util", "signal", "macros"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
zbus.workspace = true
futures-util.workspace = true
tokio-util = "0.7"
system-tray.workspace = true
png = "0.18"
reqwest.workspace = true
