[package]
name = "glimpse-custom-applet-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }

[workspace]
